--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.html",
   "scripts": {
     "build": "echo 'Build completed - static site ready for deployment'",
-    "dev": "python3 -m http.server 8000",
-    "start": "python3 -m http.server 8000"
+    "dev": "npx http-server -p 8000 .",
+    "start": "npx http-server -p 8000 .",
+    "server": "npx http-server -p 8000 ."
   },
   "keywords": [
     "retro",
@@ -16,6 +17,9 @@
   ],
   "author": "Your Name",
   "license": "MIT",
+  "devDependencies": {
+    "http-server": "^14.1.1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/yourusername/retro-game-repair.git"
